Adicionei comentários a explicar o raciocínio

--- a/tpc2_tarefa2.ipynb
+++ b/tpc2_tarefa2.ipynb
@@ -129,7 +129,10 @@
     "#Qual jogador (print do ultimo nome) de uma equipa com \"ia\" no nome, \n",
     "#que jogou menos de 200 minutos e fez mais de 100 passes?\n",
     "Jogador = playersDF[playersDF.team.str.contains(\"ia\") & (playersDF.minutes < 200) & (playersDF.passes > 100)]\n",
-    "Jogador"
+    "Jogador\n",
+    "#Através de str.contain conseguimos selecionar apenas os jogadores cujo nome contém \"ia\";\n",
+    "#Através da tabela, ao selecionar a coluna dos minutos conseguimos selecionar apenas os jogadores com menos de 200;\n",
+    "#Do mesmo modo, ao selecionar os passes, selecionamos os jogadores com mais de 100."
    ]
   },
   {
@@ -153,7 +156,8 @@
     "\n",
     "Avançados = playersDF[playersDF.position == (\"forward\")]\n",
     "MeioCampistas = playersDF[playersDF.position == (\"midfielder\")]\n",
-    "\n",
+    "#Para determinar os jogadores avançados primeiro selecionamos a coluna \"position\" e depois escolhemos apenas as que correspondem a \"forward\";\n",
+    "#Para determinar os meio-campistas, usamos o mesmo método.\n",
     "AvgForwardPasses = Forward.passes.mean()\n",
     "AvgMidfielderPasses = Midfielder.passes.mean()\n",
     "                    \n",
@@ -590,6 +594,10 @@
     "# Quantas mulheres casadas embarcaram em Cherbourg?\n",
     "# Nota: 'first' é uma função no Pandas, então 'titanic.first' irá gerar um erro;\n",
     "# use 'titanic[' first ']\n",
+    "\n",
+    "#Primeiro determinamos as pessoas totais que embarcaram em Cherbourg;\n",
+    "#Depois determinamos as mulheres casadas que embarcaram (contém \"Mrs.\" no nome);\n",
+    "#Determinamos o número de mulheres casadas através da função \"len\".\n",
     "\n",
     "EmbarcaramCherbourg = titanicDF[titanicDF.embarked == (\"Cherbourg\")]\n",
     "EmbarcaramCherbourgMulheresCasadas = EmbarkedCher[EmbarkedCher[\"first\"].str.contains(\"Mrs.\")]\n",
